--- a/VirtualPostIt/res/values/strings.xml
+++ b/VirtualPostIt/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_post_it">PostIt</string>
     <string name="title_activity_note">My note</string>
+    <string name="title_activity_note_edit">Edit the note</string>
 
 </resources>
