--- a/VirtualPostIt/res/values/strings.xml
+++ b/VirtualPostIt/res/values/strings.xml
@@ -1,11 +1,10 @@
 <resources>
 
     <string name="app_name">VirtualPostIt</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_post_it">PostIt</string>
-    <string name="title_activity_note">My note</string>
-    <string name="title_activity_note_edit">Edit the note</string>
+    <string name="title_activity_note_edit">Edit Note</string>
+    <string name="title_activity_note_view">View Note</string>
     <string name="title_activity_gmap">Map</string>
 
 </resources>
